[package]
name = "repobin"
version = "0.1.0-alpha.1"
edition.workspace = true
workspace = "../.."
description = "Experimental repo-local Bazel command dispatcher; API and behavior may change without notice"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinyfin/mono"
homepage = "https://github.com/spinyfin/mono"
documentation = "https://docs.rs/repobin"
keywords = ["bazel", "cli", "repository", "tooling"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.93.1"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "repobin"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
fs4 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
