load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "checks_merge_queue_base_test",
    srcs = ["checks_merge_queue_base_test.sh"],
    size = "small",
    visibility = ["//visibility:private"],
)

sh_test(
    name = "checks_pr_base_test",
    srcs = ["checks_pr_base_test.sh"],
    size = "small",
    visibility = ["//visibility:private"],
)
