[package]
name = "parley"
version = "0.1.0"
edition.workspace = true
description = "Experimental tmux-backed controller for interactive Claude panes"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinyfin/mono"
homepage = "https://github.com/spinyfin/mono"
rust-version = "1.93.1"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
