load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//visibility:private"])

exports_files([
    "Package.resolved",
    "Package.swift",
])

swift_library(
    name = "boss_mac_app_lib",
    module_name = "Boss",
    # Single-level glob: Sources/Ghostty/*.swift is intentionally excluded
    # from the Bazel build. Those files require GhosttyKit.xcframework, which
    # is built out-of-band by scripts/bootstrap-ghosttykit.sh and only wired
    # through SwiftPM. The Workers mode in ContentView is gated on
    # `canImport(GhosttyKit)` and shows a placeholder under Bazel.
    srcs = glob(["Sources/*.swift"]),
    copts = [
        # Mirror the swiftSettings define in Package.swift so @inlinable
        # Textual APIs (e.g. .textual.textSelection) expand correctly here.
        "-DTEXTUAL_ENABLE_TEXT_SELECTION",
    ],
    deps = [
        "@swiftpkg_textual//:Textual",
    ],
)

macos_application(
    name = "Boss",
    bundle_id = "dev.spinyfin.bossmacapp",
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    deps = [":boss_mac_app_lib"],
    # Bundle the engine and the Boss CLIs into Contents/Resources/bin/ so that
    # a single `bazel build //tools/boss/app-macos:Boss` produces a fully
    # self-contained .app (design doc Q3 on-disk layout, Q4 Phase 1).
    # cube is intentionally absent — assumed pre-installed on target machine.
    additional_contents = {
        "//tools/boss/engine:engine": "Resources/bin",
        "//tools/boss/cli:boss": "Resources/bin",
        "//tools/boss/bossctl:bossctl": "Resources/bin",
        "//tools/boss/event-shim:boss-event": "Resources/bin",
    },
    visibility = ["//tools/boss/installer:__pkg__"],
)
