load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("@mono_crates//:defs.bzl", "all_crate_deps")

rust_binary(
    name = "bossctl",
    srcs = ["src/main.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "bossctl_test",
    crate = ":bossctl",
    edition = "2024",
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)
