[package]
name = "bossctl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bossctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
boss-client = { path = "../client" }
boss-engine = { path = "../engine/core" }
boss-log-files = { path = "../log-files" }
boss-protocol = { path = "../protocol" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
