load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files(["Cargo.toml"])

rust_binary(
    name = "boss",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "boss_test",
    crate = ":boss",
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end coverage for the `boss` CLI's typed-id → product inference.
# Spawns an in-process engine and drives the `boss` binary as a real
# subprocess; the data dep stages it into the test's runfiles tree at
# `$RUNFILES_DIR/_main/tools/boss/cli/boss`.
rust_test(
    name = "infer_product_test",
    srcs = ["tests/infer_product.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end coverage for the effort-level / model-override CLI
# surface (PR #370 schema task). Same shape as `infer_product_test`
# — drives the `boss` binary against an in-process engine to confirm
# `--effort` / `--model` round-trip through create/edit/show and
# `set-default-model` lifecycles.
rust_test(
    name = "effort_and_model_test",
    srcs = ["tests/effort_and_model.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end coverage for the creation-time repo resolver (design
# §Q4 / follow-up chore #6). Same shape as the other CLI integration
# tests — drives the `boss` binary against an in-process engine to
# confirm the inference chain (explicit → prompt parser → recent →
# default → no-input refuse) behaves as designed.
rust_test(
    name = "repo_resolution_test",
    srcs = ["tests/repo_resolution.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# Regression test: boss uninstall with BOSS_INSTALL_ROOT set must not kill
# the host engine. Drives the boss binary as a subprocess; no engine needed.
rust_test(
    name = "uninstall_test",
    srcs = ["tests/uninstall.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end integration tests for the friendly-id selector semantics
# (chore 3 of 5 — "Friendly numeric IDs"). Verifies that 42, #42,
# boss/42, boss/#42, and primary-id forms all resolve correctly and
# that wrong-kind errors name the corrective verb.
rust_test(
    name = "friendly_id_test",
    srcs = ["tests/friendly_id.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end coverage for the heuristic feedback-loop audit report
# (design §Q4 follow-up, PR #370). Drives `boss product
# audit-effort` against an in-process engine with synthetic
# escalation events filed via the wire surface the sibling
# escalation-handler task will use.
rust_test(
    name = "audit_effort_test",
    srcs = ["tests/audit_effort.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)
