[package]
name = "boss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
boss-client = { path = "../client" }
boss-protocol = { path = "../protocol" }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
boss-engine = { path = "../engine/core" }
tempfile = { workspace = true }
wiremock = { workspace = true }
