[package]
name = "boss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
boss-client = { path = "../client" }
boss-editorial = { path = "../engine/editorial" }
boss-github = { path = "../github" }
boss-protocol = { path = "../protocol" }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
git-utils = { path = "../../../lib/rust/git_utils" }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
boss-engine = { path = "../engine/core" }
tempfile = { workspace = true }
wiremock = { workspace = true }
