[package]
name = "boss-client"
version.workspace = true
edition.workspace = true
workspace = "../../.."

[dependencies]
anyhow = { workspace = true }
boss-protocol = { path = "../protocol" }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
