load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

rust_library(
    name = "engine_lib",
    crate_name = "boss_engine",
    srcs = [
        "src/app.rs",
        "src/audit.rs",
        "src/audit_effort.rs",
        "src/build_info.rs",
        "src/ci_log_reader.rs",
        "src/ci_watch.rs",
        "src/cli.rs",
        "src/completion.rs",
        "src/config.rs",
        "src/conflict_diagnosis.rs",
        "src/conflict_watch.rs",
        "src/coordinator.rs",
        "src/dead_pid_sweep.rs",
        "src/dep_unblock_sweep.rs",
        "src/design_detector.rs",
        "src/dispatch_events.rs",
        "src/dispatch_reader.rs",
        "src/effort.rs",
        "src/engine_control.rs",
        "src/events_socket.rs",
        "src/external_tracker/credentials.rs",
        "src/external_tracker/github.rs",
        "src/external_tracker/mod.rs",
        "src/external_tracker/reconcile.rs",
        "src/feature_flags.rs",
        "src/host_adapter.rs",
        "src/host_registry.rs",
        "src/host_scheduling.rs",
        "src/ipc_log.rs",
        "src/lib.rs",
        "src/live_status.rs",
        "src/live_status_loop.rs",
        "src/live_status_redact.rs",
        "src/live_worker_state.rs",
        "src/merge_poller.rs",
        "src/metrics/mod.rs",
        "src/metrics/persistence.rs",
        "src/metrics/registry.rs",
        "src/orphan_sweep.rs",
        "src/pane_summary.rs",
        "src/pr_url_capture.rs",
        "src/protocol.rs",
        "src/remote_wrapper.rs",
        "src/resolution_signal_capture.rs",
        "src/run_reconcile.rs",
        "src/runner.rs",
        "src/settings.rs",
        "src/spawn_flow.rs",
        "src/ssh_transport.rs",
        "src/transcript_tail.rs",
        "src/transient_error.rs",
        "src/transient_recovery.rs",
        "src/work.rs",
        "src/work_dependencies.rs",
        "src/worker_registry.rs",
        "src/worker_sandbox_audit.rs",
        "src/worker_setup.rs",
        "src/wrapper_distribution.rs",
    ],
    crate_root = "src/lib.rs",
    compile_data = glob(["src/external_tracker/testdata/**"]) + [
        "remote/boss-remote-run.sh",
        # Stamped build-info constants (BOSS_VERSION, BOSS_GIT_SHA, BOSS_BUILD_TIME).
        # Referenced via include!(env!("BOSS_BUILD_INFO_RS")) in build_info_stamp module.
        "//tools/boss/installer:build_info_rs",
    ],
    rustc_env = {
        # Absolute path to the generated build-info constants file.
        # rules_rust prefixes $(execpath) values with ${pwd} and resolves
        # them to absolute filesystem paths before invoking rustc.
        "BOSS_BUILD_INFO_RS": "$(execpath //tools/boss/installer:build_info_rs)",
    },
    edition = "2024",
    visibility = [
        "//tools/boss/bossctl:__pkg__",
        "//tools/boss/cli:__pkg__",
        "//tools/boss/client:__pkg__",
        "//tools/boss/engine:__pkg__",
    ],
    deps = [
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "engine",
    srcs = ["src/main.rs"],
    edition = "2024",
    # Ship the boss-event hook shim alongside the engine binary so
    # PaneSpawnRunner can resolve it via runfiles at runtime. Without
    # this dep, `bazel run //tools/boss/engine:engine` builds only
    # the engine and worker `settings.json` ends up referencing
    # `boss-event` as a bare name that isn't on the worker's
    # sanitized PATH — every hook fires `command not found`.
    data = ["//tools/boss/event-shim:boss-event"],
    visibility = [
        "//tools/boss/app-macos:__pkg__",
        "//tools/boss/installer:__pkg__",
    ],
    deps = [
        ":engine_lib",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "engine_lib_test",
    crate = ":engine_lib",
    edition = "2024",
    size = "small",
    # linux-amd64 CI runners run ~6-7x slower than macOS dev boxes; the 60s default
    # for size="small" was too tight. timeout="moderate" (300s) gives headroom without
    # inflating the declared resource footprint.
    timeout = "moderate",
    # HOME must be set so cube_default_workspace_root_for_test (and the
    # production workspace_root_is_cube_default helper it mirrors) can
    # compute the expected path.  Bazel's sandbox does not inherit HOME
    # from the host environment, so we provide a stable sentinel value.
    env = {"HOME": "/tmp"},
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "work_crud_test",
    srcs = ["tests/work_crud.rs"],
    edition = "2024",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "control_verbs_test",
    srcs = ["tests/control_verbs.rs"],
    edition = "2024",
    size = "small",
    # linux-amd64 CI runners run ~6-7x slower than macOS dev boxes; the 60s default
    # for size="small" is too tight when concurrent tests contend on the
    # binary_fingerprint OnceLock during startup. timeout="moderate" (300s) gives headroom.
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "shutdown_rpc_test",
    srcs = ["tests/shutdown_rpc.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "stop_engine_runtime_test",
    srcs = ["tests/stop_engine_runtime.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "isolation_guard_test",
    srcs = ["tests/isolation_guard.rs"],
    edition = "2024",
    size = "small",
    timeout = "moderate",
    env = {"HOME": "/tmp"},
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "orphan_reaping_test",
    srcs = ["tests/orphan_reaping.rs"],
    edition = "2024",
    size = "small",
    # The orphan-reap watcher polls every 1s; ORPHAN_TIMEOUT is 8s.
    # On slow CI runners allow plenty of headroom.
    timeout = "moderate",
    env = {"HOME": "/tmp"},
    deps = [
        ":engine_lib",
        "//tools/boss/client",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

filegroup(
    name = "engine_srcs",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:private"],
)

sh_test(
    name = "no_gh_pr_merge_test",
    srcs = ["tests/no_gh_pr_merge_test.sh"],
    data = [":engine_srcs"],
    size = "small",
)
